# PresFrontend

./: .gitignore  Cargo.toml  README.md  build_web.sh  test.yml
data/: cherry.ff
docs/: PresFrontend.js  PresFrontend_bg.wasm  index.html
src/: app.rs  lib.rs  main.rs
src/analyzer/: presentation.rs  slide.rs
src/validators/: presentation.rs  slide.rs  validator.rs
