[package]
name = "presx"
version = "0.2.0"
authors = ["Kirill <stealer-mail@mail.ru>", "Rustem B. <rustemb@systemli.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.11.0" # Gives us egui, epi and web+native backends
serde_yaml = "0.8.17"
serde = { version = "1.0.125", features = ["derive"], optional = true }
image = "0.23.14"

[features]
default = ["serde"]
#http = ["eframe/http"] # Enable if you want to do http requests
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
